# Music-Recommendation-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
models/: autoencoder.keras  encoder.keras  knn_model.pkl  label_encoder.pkl  latent_features.npy  scaler.pkl
src/: config.py
src/model/: autoencoder.py
src/models/: artifacts.py  autoencoder.py  evaluation.py  explain.py  genre.py  metrics.py  mood.py  preprocessing.py  recommender.py  search.py  visualization.py
src/training/: train.py
src/ui/: app.py
tunematch.egg-info/: PKG-INFO  SOURCES.txt
